refactor and identity pictos ok
